@@ -26,7 +26,8 @@ dpkg (1.16.0) UNRELEASED; urgency=low
     happen either on distributions where dpkg is a foreign package manager,
     or on artificial dpkg databases.
   * Always warn when parsing any package control data which does not have
-    an Architecture field.
+    an Architecture field except for status and status log files when
+    packages are not-installed or half-installed.
 
   [ Raphaël Hertzog ]
   * Fail properly when debian/source/format is empty. Closes: #600854
